@@ -244,7 +244,7 @@ class LdapResolverTest(TestController):
                 assert mocked_getUserInfo.call_count == 2
 
                 # for each resolver once
-                assert mocked_getUserId.call_count == 2
+                assert mocked_getUserId.call_count == 3
 
                 getUserId_call_count = 0
 
@@ -253,7 +253,7 @@ class LdapResolverTest(TestController):
                 # one more for the existance check
                 assert mocked_getUserInfo.call_count == 3
 
-                assert mocked_getUserId.call_count == 2
+                assert mocked_getUserId.call_count == 4
 
         return
 
@@ -324,7 +324,7 @@ class LdapResolverTest(TestController):
                 self.make_validate_request("check", params=params)
 
                 # getUserId is called for each resolver
-                assert mocked_getUserId.call_count == 2
+                assert mocked_getUserId.call_count == 3
 
                 # the one which verifies the existance
                 assert mocked_getUserInfo.call_count == 2
@@ -339,7 +339,7 @@ class LdapResolverTest(TestController):
                 # cache |(user, realm) -> resolver|
                 # only the existance check is done which does one more call
 
-                assert mocked_getUserId.call_count == 2
+                assert mocked_getUserId.call_count == 4
 
                 # and the getUserInfo is fully in the cache
                 assert mocked_getUserInfo.call_count == 3
@@ -374,7 +374,7 @@ class LdapResolverTest(TestController):
                 self.make_validate_request("check", params=params)
 
                 # getUserId is called for each resolver
-                assert mocked_getUserId.call_count == 2
+                assert mocked_getUserId.call_count == 3
 
                 # + the one which verifies the existance
                 assert mocked_getUserInfo.call_count == 2
@@ -387,7 +387,7 @@ class LdapResolverTest(TestController):
 
                 # the resolvers ar not called anymore as the info is in the
                 # cache |(user, realm) -> resolver|
-                assert mocked_getUserId.call_count == 2
+                assert mocked_getUserId.call_count == 4
 
                 # only the existance check is done which does one more call
                 assert mocked_getUserInfo.call_count == 3
