@@ -25,6 +25,11 @@ linotp (3.1~0dev-0) experimental; urgency=low
   * Manage-UI no longer hangs on failed resolver save requests.
   * Token monitoring now correctly counts tokens that are assigned to multiple realms
     only once in mysql and sqlite databases.
+  * Dynamic user data (e.g. e-mail addresses and phone numbers) are always
+    refreshed during resolver lookups triggered by the authentication workflow.
+    The policies sms_dynamic_mobile_number, dynamic_email_address, and
+    voice_dynamic_mobile_number therefore directly reflect external user data
+    changes.
 
  -- KeyIdentity LinOTP Packaging <linotp@keyidentity.com>  Thu, 12 Nov 2020 17:48:51 +0200
 
